# capex-decision-engine

./: .dockerignore  .env.example  CLAUDE.md  DECISIONS.md  Dockerfile  PLAN.md  README.md  SPEC.md  WHITEBOARD-DRILL.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
engine/: __init__.py
engine/data/: __init__.py  projects.py
engine/finance/: __init__.py  metrics.py
engine/memo/: __init__.py  generate.py  prompts.py  schemas.py
engine/montecarlo/: __init__.py  risk.py  run.py  sample.py
engine/optimizer/: __init__.py  select.py
engine/sensitivity/: __init__.py  tornado.py
tests/: test_corpus.py  test_memo.py  test_metrics.py  test_montecarlo.py  test_optimizer.py  test_sensitivity.py  test_services.py  test_smoke.py  test_views.py
web/: services.py  urls.py  views.py
web/templates/web/: _memo.html  _portfolio_result.html  base.html  home.html  portfolio.html  projects.html  risk.html
